--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@+id/menu_laporan"
-        android:icon="@drawable/ic_laporan"
+        android:icon="@drawable/laporan"
         android:title="@string/menu_laporan" />
     <item
         android:id="@+id/menu_transaksi"
@@ -11,6 +11,6 @@
         android:title="@string/menu_transaksi" />
     <item
         android:id="@+id/menu_setting"
-        android:icon="@drawable/ic_setting_0"
+        android:icon="@drawable/setting"
         android:title="@string/menu_setting" />
 </menu>
