--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -11,6 +11,6 @@
         android:title="@string/menu_transaksi" />
     <item
         android:id="@+id/menu_setting"
-        android:icon="@drawable/ic_setting_0"
+        android:icon="@drawable/setting"
         android:title="@string/menu_setting" />
 </menu>
