--- a/app/src/main/res/layout/fragment_data.xml
+++ b/app/src/main/res/layout/fragment_data.xml
@@ -19,7 +19,7 @@
         app:layout_constraintVertical_bias="0.496" />
 
     <TextView
-        android:id="@+id/title2"
+        android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginStart="68dp"
