--- a/app/src/main/res/layout/fragment_data.xml
+++ b/app/src/main/res/layout/fragment_data.xml
@@ -4,7 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.DataFragment">
+    tools:context=".activities.DataFragment">
+
+    <ImageView
+        android:id="@+id/bg"
+        android:layout_width="413dp"
+        android:layout_height="931dp"
+        android:src="@drawable/bg"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.496" />
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nestedScrollView"
@@ -22,24 +34,36 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <ImageView
-                android:id="@+id/bg"
-                android:layout_width="416dp"
-                android:layout_height="0dp"
-                android:contentDescription="TODO"
-                android:src="@drawable/bg"
-                app:layout_constraintBottom_toBottomOf="parent"
+            <View
+                android:id="@+id/view"
+                android:layout_width="0dp"
+                android:layout_height="170dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="150dp"
+                android:layout_marginEnd="24dp"
+                android:background="?attr/colorButtonNormal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:ignore="ContentDescription,HardcodedText" />
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <View
+                android:id="@+id/view2"
+                android:layout_width="0dp"
+                android:layout_height="55dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginEnd="24dp"
+                android:background="?attr/colorButtonNormal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/view" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/input_tanggal"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
-                android:layout_marginTop="213dp"
+                android:layout_marginTop="150dp"
                 android:layout_marginEnd="24dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -91,7 +115,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
-                android:layout_marginTop="72dp"
+                android:layout_marginTop="32dp"
                 android:layout_marginEnd="24dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -126,14 +150,14 @@
                 android:theme="?attr/actionBarTheme"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/bg"
+                app:layout_constraintTop_toTopOf="parent"
                 app:navigationIcon="@drawable/abc_vector_test"
                 tools:ignore="PrivateResource" />
 
             <Button
                 android:id="@+id/button"
                 android:layout_width="127dp"
-                android:layout_height="38dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="68dp"
                 android:text="@string/pemasukan_1"
@@ -143,7 +167,7 @@
             <Button
                 android:id="@+id/button2"
                 android:layout_width="127dp"
-                android:layout_height="38dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:text="@string/pengeluaran_1"
                 app:layout_constraintStart_toEndOf="@+id/button"
@@ -152,7 +176,7 @@
             <Button
                 android:id="@+id/button3"
                 android:layout_width="127dp"
-                android:layout_height="38dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="80dp"
                 android:text="@string/hutang_1"
                 app:layout_constraintStart_toEndOf="@+id/button2"
