--- a/app/src/main/res/layout/fragment_transaksi.xml
+++ b/app/src/main/res/layout/fragment_transaksi.xml
@@ -53,6 +53,7 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_transaksi"
         android:layout_width="408dp"
         android:layout_height="655dp"
         android:layout_marginTop="24dp"
