--- a/app/src/main/res/layout/rowlayout.xml
+++ b/app/src/main/res/layout/rowlayout.xml
@@ -24,13 +24,13 @@
 
         <TextView
             android:id="@+id/kategori"
-            android:layout_width="107dp"
+            android:layout_width="0dp"
             android:layout_height="15dp"
             android:maxLines="1"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.437"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/jumlah"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/tanggal"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.457" />
 
@@ -41,8 +41,7 @@
             android:maxLines="1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.975"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/kategori"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.457" />
     </androidx.constraintlayout.widget.ConstraintLayout>
