--- a/app/src/main/res/layout/fragment_laporan.xml
+++ b/app/src/main/res/layout/fragment_laporan.xml
@@ -45,9 +45,10 @@
     <Button
         android:id="@+id/rad"
         android:layout_width="120dp"
-        android:layout_height="0dp"
+        android:layout_height="40dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="150dp"
+        android:background="@drawable/gradient"
         android:minWidth="125dp"
         android:text="@string/hari_ini"
         app:layout_constraintStart_toStartOf="parent"
@@ -56,9 +57,10 @@
     <Button
         android:id="@+id/minggu"
         android:layout_width="120dp"
-        android:layout_height="0dp"
+        android:layout_height="40dp"
         android:layout_marginTop="150dp"
         android:layout_marginEnd="24dp"
+        android:background="@drawable/gradient"
         android:minWidth="125dp"
         android:text="Minggu ini"
         app:layout_constraintEnd_toEndOf="parent"
@@ -67,8 +69,9 @@
     <Button
         android:id="@+id/bulan"
         android:layout_width="120dp"
-        android:layout_height="0dp"
+        android:layout_height="40dp"
         android:layout_marginTop="150dp"
+        android:background="@drawable/gradient"
         android:minWidth="125dp"
         android:text="Bulan ini"
         app:layout_constraintEnd_toStartOf="@+id/minggu"
@@ -116,7 +119,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
-        android:background="?attr/colorButtonNormal"
+        android:background="@drawable/gradient"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bulan" />
