--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#2196F3</color>
     <color name="colorPrimaryDark">#002640</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="gradientA">#FFFFFF</color>
+    <color name="gradientB">#D6D6D6</color>
 </resources>
