--- a/app/src/main/res/layout/cardview.xml
+++ b/app/src/main/res/layout/cardview.xml
@@ -7,6 +7,7 @@
     android:layout_height="40dp">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="30dp"
